sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:11: error: not found: value dbtRouge
    }else if (i<dbtRouge && getCouleur(i)==ROUGE){
                ^DutchFlagAlgo:12: error: not found: value dbtRouge
      echange(i,dbtRouge)
                ^DutchFlagAlgo:13: error: not found: value dbtRouge
      dbtRouge-=1
      ^